--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "dist/server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "nodemon server.js",
+    "build": "babel server.js --out-file dist/server.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -19,16 +29,12 @@
     "path": "^0.12.7",
     "uuid": "^9.0.1"
   },
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+  "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7"
   },
-  "type": "module",
-  "name": "server",
-  "version": "1.0.0",
-  "main": "server.js",
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
