--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon server.js",
-    "build": "babel server.js --out-file dist/server.js"
+    "build": "npm install && npx babel server.js --out-file dist/server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
